<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_big_font">大</string>
    <string name="action_large_font">特大</string>
    <string name="action_medium_font">中</string>
    <string name="action_small_font">小</string>
    <string name="app_id">E80326E9</string>
    <string name="app_name">看TV</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="area_code_13">澳洲</string>
    <string name="area_code_153">新西兰</string>
    <string name="area_code_38">加拿大</string>
    <string name="bind_mail_tip">为了您的账号安全，请绑定邮箱</string>
    <string name="bind_now">立即绑定</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="cache_tv_str">缓存</string>
    <string name="cast_ad_label">Ad</string>
    <string name="cast_casting_to_device">Casting to %1$s</string>
    <string name="cast_closed_captions">Closed captions</string>
    <string name="cast_closed_captions_unavailable">Closed captions unavailable</string>
    <string name="cast_connecting_to_device">Connecting to %1$s</string>
    <string name="cast_disconnect">Disconnect</string>
    <string name="cast_expanded_controller_ad_image_description">Image displayed while the cast receiver is playing an ad</string>
    <string name="cast_expanded_controller_ad_in_progress">Ad in progress…</string>
    <string name="cast_expanded_controller_background_image">Album art</string>
    <string name="cast_expanded_controller_live_stream_indicator">Live stream</string>
    <string name="cast_expanded_controller_loading">Loading…</string>
    <string name="cast_expanded_controller_skip_ad_label">Skip Ad</string>
    <string name="cast_expanded_controller_skip_ad_text">You can skip ad in %1$d…</string>
    <string name="cast_forward">Forward</string>
    <string name="cast_forward_10">Forward ten seconds</string>
    <string name="cast_forward_30">Forward thirty seconds</string>
    <string name="cast_intro_overlay_button_text">@android:string/ok</string>
    <string name="cast_invalid_stream_duration_text">--:--</string>
    <string name="cast_invalid_stream_position_text">--:--</string>
    <string name="cast_mute">Mute</string>
    <string name="cast_notification_connected_message">Connected to %1$s</string>
    <string name="cast_notification_connecting_message">Connecting to %1$s</string>
    <string name="cast_notification_default_channel_name">Cast</string>
    <string name="cast_notification_disconnect">Disconnect</string>
    <string name="cast_pause">Pause</string>
    <string name="cast_play">Play</string>
    <string name="cast_rewind">Rewind</string>
    <string name="cast_rewind_10">Rewind ten seconds</string>
    <string name="cast_rewind_30">Rewind thirty seconds</string>
    <string name="cast_seek_bar">Playback seek control</string>
    <string name="cast_skip_next">Skip to next item</string>
    <string name="cast_skip_prev">Skip to previous item</string>
    <string name="cast_stop">Stop</string>
    <string name="cast_stop_live_stream">Stop live stream</string>
    <string name="cast_tracks_chooser_dialog_audio">Audio</string>
    <string name="cast_tracks_chooser_dialog_cancel">Cancel</string>
    <string name="cast_tracks_chooser_dialog_closed_captions">Closed Captions</string>
    <string name="cast_tracks_chooser_dialog_default_track_name">Track %1$d</string>
    <string name="cast_tracks_chooser_dialog_none">None</string>
    <string name="cast_tracks_chooser_dialog_ok">OK</string>
    <string name="cast_tracks_chooser_dialog_subtitles">Subtitles</string>
    <string name="cast_unmute">Unmute</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="chinesetoday">http://cdn36.chinesetoday.cn/news/detail/%s.html</string>
    <string name="close_player_delay">定时关闭播放：</string>
    <string name="collect_empty">暂无资讯收藏</string>
    <string name="com.crashlytics.android.build_id">774222e1-b3c7-4c2d-a0f7-9ebcfe30d265</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="default_nick_head">火星网友</string>
    <string name="fast_tv">快进%s秒</string>
    <string name="google_app_id">1:473621722615:android:dd679cfe9cfe2d57</string>
    <string name="history_tv_str">观看记录</string>
    <string name="hot_tv_str">热播榜</string>
    <string name="ijkplayer_dummy" />
    <string name="jump_ad">跳过</string>
    <string name="listview_header_hint_normal">下拉刷新...</string>
    <string name="listview_header_hint_release">释放刷新...</string>
    <string name="listview_header_last_time">上次更新时间：</string>
    <string name="listview_loading">努力加载中...</string>
    <string name="load_area_fail">地区加载失败</string>
    <string name="login_text1">提示</string>
    <string name="login_text2">您的账号已在其他设备上登录，请重新登录！</string>
    <string name="login_text3">您当前还未登录，是否前往登录？</string>
    <string name="mr_button_content_description">Cast button</string>
    <string name="mr_cast_button_connected">Cast button. Connected</string>
    <string name="mr_cast_button_connecting">Cast button. Connecting</string>
    <string name="mr_cast_button_disconnected">Cast button. Disconnected</string>
    <string name="mr_chooser_searching">Finding devices</string>
    <string name="mr_chooser_title">Cast to</string>
    <string name="mr_controller_album_art">Album art</string>
    <string name="mr_controller_casting_screen">Casting screen</string>
    <string name="mr_controller_close_description">Close</string>
    <string name="mr_controller_collapse_group">Collapse</string>
    <string name="mr_controller_disconnect">Disconnect</string>
    <string name="mr_controller_expand_group">Expand</string>
    <string name="mr_controller_no_info_available">No info available</string>
    <string name="mr_controller_no_media_selected">No media selected</string>
    <string name="mr_controller_pause">Pause</string>
    <string name="mr_controller_play">Play</string>
    <string name="mr_controller_stop">Stop</string>
    <string name="mr_controller_stop_casting">Stop casting</string>
    <string name="mr_controller_volume_slider">Volume slider</string>
    <string name="mr_system_route_name">System</string>
    <string name="mr_user_route_category_name">Devices</string>
    <string name="mute">静音</string>
    <string name="news_collect">资讯收藏</string>
    <string name="news_comment_empty">"成为楼主的机会来了，
快来和其他影迷分享你的看法~"</string>
    <string name="news_histroy">浏览历史</string>
    <string name="newscomment_num_str">已有%s人参与跟帖</string>
    <string name="newsdetail_show_error">加载失败，点击屏幕任意空白区域重试</string>
    <string name="nickname_tip">1-16个字符，可由中英文、数字组成</string>
    <string name="no_net">当前找不到网络</string>
    <string name="no_url">播放地址无效</string>
    <string name="nomore_loading">There s nothing more</string>
    <string name="notice">请选择连接设备，选择连接设备才可播放</string>
    <string name="notification_error_ssl_cert_invalid">网页SSL证书认证异常</string>
    <string name="on_close">不开启</string>
    <string name="open_gps_tips">为了根据你所在的地区方便推荐相关影视、资讯、评论，请开启GPS权限</string>
    <string name="open_gps_title">开启GPS权限</string>
    <string name="open_push_tips">为了方便为您推送本地资讯、最新影视上映信息等，请开启推送通知</string>
    <string name="open_push_title">开启通知权限</string>
    <string name="original_statement">本文为转载发布，仅代表原作者或原平台态度，不代表我方观点。看TV仅提供信息发布平台，文章或有适当删改。对转载有异议和删稿要求的原著方，可联络kantvteam@qq.com</string>
    <string name="password_toggle_content_description">Toggle password visibility</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="pause">暂停</string>
    <string name="play">播放</string>
    <string name="play_over">播完本集</string>
    <string name="progress">进度</string>
    <string name="stop">停止</string>
    <string name="volume">音量</string>
</resources>